# SteamingUtilities

./: .gitignore  CMakeLists.txt  README.md
include/: ascii_file_stream.h  binary_file_stream.h  dynamic_erdos_generator.h  graph_stream.h  permuted_set.h  single_cut_generator.h  static_erdos_generator.h  stream_types.h
scripts/: generate_kron_18.sh
src/: dynamic_erdos_generator.cpp  single_cut_generator.cpp  static_erdos_generator.cpp
tools/: queryifier.cpp  run_erdos_gen.cpp  run_permuted_set.cpp  run_single_cut_gen.cpp  stream_file_converter.cpp  stream_validator.cpp  streamifier.cpp  to_static.cpp
